src/component/style.css
.dc-table {
  position: relative;
  border-left: 1px;
  border-top: 1px;
  border-color: black;
  border-style: solid;
  border-right: 0;
  border-bottom: 0;
}

.dc-table table {
  table-layout:fixed;
}

.dc-table-col-resize-proxy {
  position: absolute;
  left: 200px;
  top: 0;
  bottom: 0;
  width: 0;
  border-left: 1px solid #e7eaec;
  z-index: 10;
}

.dc-table-row-resize-proxy {
  position: absolute;
  left: 0;
  top: 10px;
  right: 0;
  height: 0;
  border-top: 1px solid #e7eaec;
  z-index: 10;
}

.dc-table .leaf {
  border-bottom: 0;
}

.dc-table .cell {
  width: 100%;
  overflow: hidden;
  display: flex;
  display: -ms-flexbox;
  justify-content: center;
  align-items: center;
}

.dc-table .body-wrapper {
  overflow: auto;
}

.dc-table .col-header-wrapper {
  overflow: hidden;
}

.dc-table .row-header-wrapper {
  overflow: hidden;
  position: absolute;
  top: 0;
}

.dc-table th, .dc-table td {
  text-align: center;
  box-sizing: border-box;
  border-bottom: 1px;
  border-right: 1px;
  border-left: 0;
  border-top: 0;
  border-color: black;
  border-style: solid;
}

.dc-table::before {
  left: 0;
  bottom: 0;
  width: 100%;
  height: 1px;
}

.dc-table::after {
  top: 0;
  right: 0;
  width: 1px;
  height: 100%;
}

.dc-table::before, .dc-table::after {
  content: '';
  position: absolute;
  background-color: black;
  z-index: 1;
}

.dc-table td, .dc-table th {
  padding: 0;
}

.dc-table .corner-block {
  position: absolute;
  top: 0;
  left: 0;
}

.dc-table .nodata-block {
  position: relative;
  min-height: 60px;
  text-align: center;
  width: 100%;
  height: 100%;
}
.dc-table .nodata-text {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%,-50%);
}

